--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 20px;
 }
 .message {
     border-radius: 20px;
